add genres populate

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon ./index.js",
     "seed:all": "npx sequelize-cli db:seed:all",
     "seed:undo:all": "npx sequelize-cli db:seed:undo:all",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [
     "alkemy",
@@ -34,9 +34,13 @@
     "sequelize": "^6.23.2"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "chai-uuid": "^1.0.6",
     "eslint": "^8.24.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.5.1"
   }
